--- a/PROJECT/Login.xaml
+++ b/PROJECT/Login.xaml
@@ -23,5 +23,9 @@
                  PasswordChar="*"/>
         <Button x:Name="txtLogin" Content="Login" HorizontalAlignment="Left" Margin="228,293,0,0" VerticalAlignment="Top" Height="31" Width="74" Background="White" FontWeight="Bold" Click="txtLogin_Click"/>
         <Button x:Name="txtCancel" Content="Cancel" HorizontalAlignment="Left" Margin="366,293,0,0" VerticalAlignment="Top" Height="32" Width="74" Background="White" FontWeight="Bold" Click="txtCancel_Click" RenderTransformOrigin="0.617,-0.801"/>
+        <Button x:Name="txtRoom" Content="Room" HorizontalAlignment="Center" Margin="0,366,0,0" VerticalAlignment="Top" Height="32" Width="74" Background="White" FontWeight="Bold" Click="txtRoom_Click" RenderTransformOrigin="0.617,-0.801"/>
+        <TextBox x:Name="txtRoomNumber" HorizontalAlignment="Center" Margin="0,330,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="281" Height="30" TextAlignment="Left" VerticalContentAlignment="Center"
+            HorizontalContentAlignment="Center"/>
+        <Label Content="Room Number:" Margin="54,328,446,0" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="15" Height="54"/>
     </Grid>
 </Window>
